# OmixHub

./: .gitignore  .readthedocs.yaml  LICENSE  PyDeseq2_demo.ipynb  README.md  TCGA_Deseq2_analysis.ipynb  TCGA_DimRedMappers_utils_test.ipynb  TCGA_EDA.ipynb  TCGA_Semisupervised_clustering.ipynb  TCGA_Supervised_Multilabel_Classification.ipynb  TCGA_clustering_methods.ipynb  TCGA_dr_analysis.ipynb  TCGA_processing.ipynb  app.py  app_gradio.py  comparing_OT_for_identifying_similar_to_normal_tissue.ipynb  dataoperations.html  documentation.html  env_omixhub.yml  explore_disease_specific_drug_target_interactions.ipynb  file.txt  gdc_tutorial_part1.ipynb  generic_environment.yml  idc_testing.ipynb  index.html  optimal_transport_for_normal_samples.ipynb  outlier_stat_method_approx_demo.ipynb  outlier_stat_method_demo.ipynb  outlier_stat_method_perm_demo.ipynb  pydeseq_gsea copy.ipynb  pydeseq_gsea.ipynb  pyproject.toml  requirements.txt  tcia_tcga_combined.ipynb  test_bigquery_upload_script.py  test_gradio.ipynb  testing_unified_ensemble_non_ensemble_models.ipynb  upload_created_cohorts_to_gcp.ipynb  upload_pydeseq_to_bq.ipynb
DimRedMappers/: umap_embedders.py
OmicsUtils/: README.md  preprocess_utils.py  pydeseq_utils.py
OutlierMethodsApplication/: README.md
OutlierStatMethods/: README.md  outlier_sum_stat_perm.py
SupervisedLearningApplication/: Summary.md  Workflow.md
Transcriptomics/: README.md
UmapApplication/: README.md  Summary.md  Workflow.md
docs/: CNAME  additional_code_docs.rst  applications.rst  conf.py  examples.rst  getting_started.rst  index.rst  (+3 more)
(+115 files in other folders)
